call-center/src/objects/Encounter__c.object
<CustomObject>
    <fields>
        <fullName>Allowed_Amount__c</fullName>
        <formula>Total_Charges__c -  Insurance_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Patient_Portion__c - Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Charge_Group_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billed Charge Group Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Insurance_Percent__c</fullName>
        <label>Co-Insurance Percent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Pay__c</fullName>
        <label>Co-Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The coverage associated with this Encounter</description>
        <label>Coverage</label>
        <referenceTo>Coverage__c</referenceTo>
        <relationshipLabel>Encounters</relationshipLabel>
        <relationshipName>Encounters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Service__c</fullName>
        <label>Date of Service</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Minutes__c</fullName>
        <inlineHelpText>Expected Procedure Duration</inlineHelpText>
        <label>Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Encounter_Id__c</fullName>
        <label>Encounter ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encounter_Substatus__c</fullName>
        <formula>IF(OR(ISPICKVAL(Status__c, &quot;In Process&quot;), ISPICKVAL(Status__c, &quot;Error&quot;)), &quot;Unavailable&quot;,
IF(ISPICKVAL(Status__c, &quot;Cancelled&quot;), &quot;Cancelled&quot;,
IF(AND(ISPICKVAL(Status__c, &quot;Ready&quot;), Billed_Charge_Group_Count__c &gt; 0), &quot;Serviced&quot;,
IF(AND(ISPICKVAL(Status__c, &quot;Ready&quot;), Balance__c &gt; 0, Billed_Charge_Group_Count__c == 0), &quot;Payment Due&quot;,
IF(AND(ISPICKVAL(Status__c, &quot;Ready&quot;), Balance__c &lt;= 0, Billed_Charge_Group_Count__c == 0), &quot;Paid&quot;, &quot;&quot;)
)
)
)
)</formula>
        <label>Encounter Substatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Id__c</fullName>
        <label>Estimate ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Deductible_Remaining__c</fullName>
        <formula>Family_Deductible__c -  Family_Deductible_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Deductible Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Deductible_Used__c</fullName>
        <label>Family Deductible Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Deductible__c</fullName>
        <label>Family Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Out_Of_Pocket_Max__c</fullName>
        <label>Family Out of Pocket Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Out_Of_Pocket_Remaining__c</fullName>
        <formula>Family_Out_Of_Pocket_Max__c  - Family_Out_Of_Pocket_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Out of Pocket Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Out_Of_Pocket_Used__c</fullName>
        <label>Family Out of Pocket Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guarantor_Name__c</fullName>
        <formula>Patient__r.Guarantor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guarantor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Encounters (Guarantor)</relationshipLabel>
        <relationshipName>Encounters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible_Remaining__c</fullName>
        <formula>Individual_Deductible__c -  Individual_Deductible_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Deductible Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible_Used__c</fullName>
        <label>Individual Deductible Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible__c</fullName>
        <label>Individual Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Out_Of_Pocket_Max__c</fullName>
        <label>Individual Out of Pocket Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Out_Of_Pocket_Remaining__c</fullName>
        <formula>Individual_Out_Of_Pocket_Max__c -  Individual_Out_Of_Pocket_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Out of Pocket Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Out_Of_Pocket_Used__c</fullName>
        <label>Individual Out of Pocket Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Discount__c</fullName>
        <label>Insurance Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Portion__c</fullName>
        <label>Insurance Portion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Total__c</fullName>
        <formula>Insurance_Discount__c +  Insurance_Portion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liability__c</fullName>
        <label>Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Phone_Number__c</fullName>
        <label>Location Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Physician__c</fullName>
        <label>Ordering Physician</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Portion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Patient Portion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Encounters (Patient)</relationshipLabel>
        <relationshipName>Encounters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler__c</fullName>
        <label>Scheduler</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Charges__c</fullName>
        <label>Total Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HB</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Encounter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Patient__c</columns>
        <columns>Date_Of_Service__c</columns>
        <columns>Procedure__c</columns>
        <columns>Location__c</columns>
        <columns>Patient_Portion__c</columns>
        <columns>Balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>en-{YYYY}{MM}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encounters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>